<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">




        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/research_in_detail_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/frame_line_block_thin_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/title_recommended"
            android:layout_margin="20dp"
            android:padding="5dp">

            <TextView
                android:id="@+id/title_in_research_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:padding="10dp"
                android:text="@string/title_research_detail"
                android:textSize="20sp"
                android:background="@drawable/rounded_line_block"/>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/where_research_in_detail_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_line_block"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/category_research_in_detail_container"
                app:layout_constraintTop_toBottomOf="@id/title_in_research_detail"
                android:hint="@string/hint_where"
                android:padding="5dp"
                >

                <ImageView
                    android:id="@+id/icon_where"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/icon_pin"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />

                <TextView
                    android:id="@+id/where_research_in_detail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@id/icon_where"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:paddingStart="5dp"
                    android:hint="@string/hint_where"
                    />


            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/category_research_in_detail_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_line_block"
                app:layout_constraintStart_toEndOf="@id/where_research_in_detail_container"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title_in_research_detail"
                android:hint="@string/hint_category"
                android:padding="5dp">

                <ImageView
                    android:id="@+id/icon_category"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/icon_food"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />

                <TextView
                    android:id="@+id/category_research_in_detail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@id/icon_category"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:paddingStart="5dp"
                    android:hint="@string/hint_category"/>

            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/when_research_in_detail_cotainer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_line_block"
                app:layout_constraintTop_toBottomOf="@id/where_research_in_detail_container"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/time_research_in_detail_container"
                android:padding="5dp">

                <ImageView
                    android:id="@+id/icon_when"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/icon_calender"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />


                <TextView
                    android:id="@+id/when_research_in_detail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@id/icon_when"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:paddingStart="5dp"
                    android:hint="@string/hint_when"/>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/time_research_in_detail_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_line_block"
                app:layout_constraintTop_toBottomOf="@id/where_research_in_detail_container"
                app:layout_constraintStart_toEndOf="@id/when_research_in_detail_cotainer"
                app:layout_constraintEnd_toStartOf="@id/member_research_in_detail_container"
                android:padding="5dp"
                >

                <ImageView
                    android:id="@+id/icon_time"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/icon_time"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />

                <TextView
                    android:id="@+id/time_research_in_detail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@id/icon_time"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:paddingStart="5dp"
                    android:hint="@string/hint_time"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/member_research_in_detail_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_line_block"
                app:layout_constraintTop_toBottomOf="@id/where_research_in_detail_container"
                app:layout_constraintStart_toEndOf="@id/time_research_in_detail_container"
                app:layout_constraintEnd_toEndOf="parent"
                android:padding="5dp">


                <ImageView
                    android:id="@+id/icon_member"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/icon_people"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />


                <TextView
                    android:id="@+id/member_research_in_detail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@id/icon_member"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:paddingStart="5dp"
                    android:hint="@string/hint_member"/>



            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/check_room_research_in_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/when_research_in_detail_cotainer"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="20dp"
                android:textSize="20sp"
                android:text="@string/hint_room"/>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/excute_research_in_detail_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/frame_roundness_thin_red"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/check_room_research_in_detail"
                android:layout_margin="20dp"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/icon_excute_research_in_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_research_white"
                    android:layout_marginStart="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <TextView
                    android:id="@+id/text_excute_research_in_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@id/icon_excute_research_in_detail"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/title_recommended"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/research_in_detail_container"
            app:layout_constraintBottom_toTopOf="@id/recommended_shop_recyclerView"
            android:layout_marginTop="20dp"
            android:text="@string/title_recommended"/>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recommended_shop_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_recommended"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/frame_roundness_thin_red"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
